# liveq

./: Cargo.toml  README.md
src/: api.rs  fft.rs  main.rs  real_time.rs
templates/: band.html  devices.html  equalizer.html  index.html
